<resources>
    <string name="app_name">Belief</string>
    <string name="thirtysecs">10 secs</string>
    <string name="onemin">30 secs</string>
    <string name="fivemins">1 min</string>
    <string name="make_call">Call</string>
    <string name="fake_name">Enter name</string>
    <string name="fake_number">Enter phone number</string>
    <string name="title_activity_fake_ringing">FakeRingingActivity</string>
    <string name="incomingcall">Incoming Call</string>
    <string name="fakecallname">Genny Nnaji</string>
    <string name="fakecallnumber">080371558000</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="PanicButton">Panic!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="save_c">Save </string>
    <string name="add">+</string>
    <string name="name">Name</string>

    <!--About-->
    <string name="about">About</string>
    <string name="about_message">This application was built by TAS as final year project</string>
    <!--fake call-->
    <string name="incoming_call">Incoming call</string>
    <string name="missed">Missed</string>

    <!--slider code-->
    <string name="title_activity_welcome">BELIEF</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">First App developed by TAS!</string>
    <string name="slide_2_title">T bole toh Tabrez</string>
    <string name="slide_3_title">A bole toh Ankit</string>
    <string name="slide_4_title">S bole toh Saif</string>
</resources>