<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tabish.belief.contacts">

    <Button
        android:text="@string/save_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:id="@+id/save_c"
        android:onClick="onsaveContact"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/ph_no1" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:onClick="pickContact"
        android:layout_alignTop="@+id/ph_no1"
        android:layout_toEndOf="@+id/ph_no1" />

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name1"
        android:layout_marginTop="23dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/ph_no1"
        android:layout_below="@+id/name1"
        android:layout_alignEnd="@+id/viewA"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="30dp"
        android:hint="Enter mobile number" />

    <Button
        android:text="View Contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:id="@+id/viewA"
        android:layout_above="@+id/save_c"
        android:layout_centerHorizontal="true" />

</RelativeLayout>