<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/incomingcall"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/chosenfakename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView1"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/fakecallname" />

    <TextView
        android:id="@+id/chosenfakenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chosenfakename"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/fakecallnumber" />

    <Button
        android:id="@+id/rejectcall"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@null"
        android:background="@drawable/rejectcall" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@null"
        android:src="@drawable/nnaji"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/answercall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:contentDescription="@null"
        android:background="@drawable/acceptcall"
        android:layout_marginBottom="23dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/chosenfakename" />

</RelativeLayout>